# LogLens

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
assets/: sample_config.json
docs/: design.md  dev-setup.md  release-process.md  release-v0.1.0.md  release-v0.3.0.md  repo-hardening.md
src/: config.cpp  config.hpp  detector.cpp  detector.hpp  event.hpp  main.cpp  parser.cpp  parser.hpp  report.cpp  report.hpp  signal.cpp  signal.hpp
tests/: test_cli.cpp  test_detector.cpp  test_parser.cpp  test_report_contracts.cpp
tests/fixtures/report_contracts/journalctl_short_full/: report.json  report.md
tests/fixtures/report_contracts/multi_host_journalctl_short_full/: report.json  report.md
tests/fixtures/report_contracts/multi_host_syslog_legacy/: findings.csv  report.json  report.md  warnings.csv
tests/fixtures/report_contracts/syslog_legacy/: findings.csv  report.json  report.md  warnings.csv
